--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -25,6 +25,8 @@
         </ul>
     </nav>
     <h1>Calculadora de Calorías</h1>
+    <h2>Ingresa tus datos para obtener un estimado de las calorías que tu <br>
+         cuerpo necesita para mantener un peso ideal </h2>
     <div class="form-container">
         <label for="edad">Edad:</label>
         <input type="number" id="edad">
